优化图片预览，图片分类，用户配置界面

--- a/src/main/resources/static/classmanage.html
+++ b/src/main/resources/static/classmanage.html
@@ -8,17 +8,17 @@
 	<body>
 		<div class="layui-container" style="margin-top: 20px;">
 			<fieldset class="layui-elem-field layui-field-title">
-				<legend>分类管理
-					<span class="layui-badge layui-bg-orange">+</span>
-					<div class="layui-btn-group">
-						<button type="button" class="add-btn layui-btn layui-btn-sm">音乐</button>
-						<button type="button" class="add-btn layui-btn layui-btn-sm">视频</button>
-						<button type="button" class="add-btn layui-btn layui-btn-sm">文档</button>
-						<button type="button" class="add-btn layui-btn layui-btn-sm">图片</button>
-					</div>
-					
-				</legend>
+				<legend>分类管理</legend>
 				<div class="layui-field-box">
+					<a href="userconfig.html" class="layui-btn layui-btn-sm">返回配置页</a>
+					<span class="layui-badge layui-bg-gray" style="margin-left: 20px">添加索引:</span>
+					<div class="layui-btn-group">
+						<button type="button" class="add-btn layui-bg-blue layui-btn layui-btn-sm">音乐</button>
+						<button type="button" class="add-btn layui-bg-blue layui-btn layui-btn-sm">视频</button>
+						<button type="button" class="add-btn layui-bg-blue layui-btn layui-btn-sm">文档</button>
+						<button type="button" class="add-btn layui-bg-blue layui-btn layui-btn-sm">图片</button>
+					</div>
+					<br><br>
 					<div class="layui-collapse">
 						<div class="layui-colla-item">
 							<h2 class="layui-colla-title">音乐</h2>
@@ -90,7 +90,7 @@
 								<button type="button" class="modify-btn layui-btn layui-btn-fluid">修改</button>\
 							</div>\
 							<div class="layui-col-md1">\
-								<button type="button" class="remove-btn layui-btn layui-btn-fluid">移除</button>\
+								<button type="button" class="remove-btn layui-btn layui-bg-red layui-btn-fluid">移除</button>\
 							</div>\
 						</div>\
 					</blockquote>\
