--- a/src/main/resources/static/favorite.html
+++ b/src/main/resources/static/favorite.html
@@ -10,7 +10,7 @@
 			<fieldset class="layui-elem-field layui-field-title">
 				<legend>收藏夹</legend>
 				<div class="layui-field-box">
-					<a href="index.html" class="layui-btn layui-btn-sm">返回浏览</a>
+					<a href="index.html" class="layui-btn layui-bg-blue layui-btn-sm">返回浏览</a>
 					<a href="userconfig.html" class="layui-btn layui-btn-sm">返回配置页</a>
 					<br><br>
 					<div id="favorite-list" class="layui-row layui-col-space15">
