--- a/src/main/resources/static/userconfig.html
+++ b/src/main/resources/static/userconfig.html
@@ -11,19 +11,15 @@
 				<legend>用户配置</legend>
 				<div class="layui-field-box">
 					<button id="logout-btn" class="layui-btn layui-btn-sm layui-bg-red">退出登录</button>
-					<a href="index.html" class="layui-btn layui-btn-sm">返回浏览</a>
+					<a href="index.html" class="layui-btn layui-bg-blue layui-btn-sm">返回浏览</a>
 					<div class="layui-field-box">
 						<div class="layui-collapse">
 							<div class="layui-colla-item">
-								<h2 class="layui-colla-title">文件隐藏配置</h2>
+								<h2 class="layui-colla-title">文件常用管理</h2>
 								<div class="layui-colla-content layui-show">
 									<a type="button" href="hidemanage.html" class="layui-btn layui-btn-warm">隐藏管理</a>
-								</div>
-							</div>
-							<div class="layui-colla-item">
-								<h2 class="layui-colla-title">收藏管理</h2>
-								<div class="layui-colla-content layui-show">
 									<a type="button" href="favorite.html" class="layui-btn layui-btn-warm">收藏管理</a>
+									<a type="button" href="classmanage.html" class="layui-btn layui-btn-warm">分类管理</a>
 								</div>
 							</div>
 							<div class="layui-colla-item">
