--- a/src/main/resources/static/images.html
+++ b/src/main/resources/static/images.html
@@ -8,6 +8,9 @@
 	<body>
 		<ul class="layui-nav layui-bg-blue">
 			<li class="layui-nav-item">
+				<a href="index.html"><i class="layui-icon layui-icon-home"></i></a>
+			</li>
+			<li class="layui-nav-item">
 				<a href="musics.html">音乐</a>
 			</li>
 			<li class="layui-nav-item">
@@ -17,14 +20,8 @@
 				<a href="documents.html">文档</a>
 			</li>
 			<li class="layui-nav-item  layui-this">
-				<a href="#">图片<span id="image-count" class="layui-badge">0</span></a>
+				<a id="update-cache">图片<span id="image-count" class="layui-badge">0</span></a>
 			</li>
-			<li class="layui-nav-item">
-				<a href="index.html">返回主页</a>
-			</li>
-<!--			<li class="layui-nav-item">-->
-<!--				<a id="update-cache" href="#">更新缓存</a>-->
-<!--			</li>-->
 		</ul>
 <!--		<div class="layui-container" style="padding: 20px;">-->
 <!--			<div id="image-list-box" class="layui-row layui-col-space15">-->
@@ -36,7 +33,8 @@
 			<blockquote class="layui-elem-quote">
 				<div class="layui-row layui-col-space5" style="text-align: center;color: #009688;">
 					<div class="layui-col-md5">
-						名称 <span id="update-cache" class="layui-badge layui-bg-green"><i class="layui-icon">&#xe669;</i></span>
+						名称
+<!--						<span id="update-cache" class="layui-badge layui-bg-green"><i class="layui-icon">&#xe669;</i></span>-->
 					</div>
 					<div class="layui-col-md2">
 						类型
@@ -166,6 +164,7 @@
 					}
 				});
 
+				//刷新缓存
 				$('#update-cache').click(function () {
 					$.post('http://localhost:8080/class/manage/del/cache',function (rel) {
 						if (rel.code === 0) {
