--- a/src/main/resources/static/userconfig.html
+++ b/src/main/resources/static/userconfig.html
@@ -51,7 +51,7 @@
 							</div>
 							<div class="layui-colla-item">
 								<h2 class="layui-colla-title">用户操作日志</h2>
-								<div id="userInfo" class="layui-colla-content layui-show">
+								<div  class="layui-colla-content layui-show">
 									<div style="width: 1000px;">
 										<table class="layui-hide" id="log-table"></table>
 									</div>
