--- a/src/main/resources/static/hidemanage.html
+++ b/src/main/resources/static/hidemanage.html
@@ -10,7 +10,7 @@
 	<body>
 		<div class="layui-container" style="margin-top: 20px;">
 			<fieldset class="layui-elem-field layui-field-title">
-				<legend>文件夹密码管理</legend>
+				<legend>文件隐藏管理</legend>
 				<div class="layui-field-box" id="hide-box">
 					<a href="userconfig.html" class="layui-btn layui-btn-sm">返回配置页</a>
 					<button id="add-path-btn" type="button" class="layui-btn layui-btn-normal">添加记录</button>
